fix overflow UI #JC19-502

--- a/apps/react/src/features/anime/components/AnimeDetail/AnimeDetail.module.css
+++ b/apps/react/src/features/anime/components/AnimeDetail/AnimeDetail.module.css
@@ -1,12 +1,9 @@
 .anime-detail {
   text-align: center;
   position: relative;
-  padding: 0;
-  overflow-y: scroll;
 }
 
 .loader {
-  width: var(--anime-detail-width);
   display: flex;
   justify-content: center;
   align-items: center;
